@@ -1,6 +1,6 @@
 Package: digest
-Version: 0.6.5
-Date: 2013-12-08
+Version: 0.6.6
+Date: 2013-12-09
 Author: Dirk Eddelbuettel <edd@debian.org> with contributions 
  by Antoine Lucas, Jarek Tuszynski, Henrik Bengtsson, Simon Urbanek,
  Mario Frasca, Bryan Lewis, Murray Stokely, Hannes Muehleisen,
@@ -29,7 +29,7 @@ Description: Implementation of a function 'digest()' for the creation
 Depends: R (>= 2.4.1)
 License: GPL-2
 URL: http://dirk.eddelbuettel.com/code/digest.html
-Packaged: 2014-12-08 14:11:52.324514 UTC; edd
+Packaged: 2014-12-09 18:33:01.2505 UTC; edd
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-12-09 08:17:32
+Date/Publication: 2014-12-10 07:37:01
